cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(solver)
add_executable(solver equation.cpp)
include_directories(/home/daniel/Merlin13-666/workspace/projects/lab03/formatter_ex_lib /home/daniel/Merlin13-666/workspace/projects/lab03/solver_lib)
add_subdirectory(/home/daniel/Merlin13-666/workspace/projects/lab03/formatter_ex_lib formatter_ex)
add_subdirectory(/home/daniel/Merlin13-666/workspace/projects/lab03/solver_lib solver_lib)
target_link_libraries(solver formatter_ex solver_lib)
